# indy-cli-rs

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  LICENSE  rust.Dockerfile  ubuntu-copy.Dockerfile  ubuntu-env-var.Dockerfile  ubuntu.Dockerfile
.github/: dependabot.yml
.github/workflows/: release.yml  verify.yml
ci/: indy-pool.dockerfile
cli/: Cargo.toml  README.md  batch-demo-script  batch-test-script  build.rs
cli/debian/: copyright
cli/docs/: README.md
cli/src/: command_executor.rs  error.rs  main.rs  params_parser.rs
cli/src/commands/: common.rs  did.rs  ledger.rs  mod.rs  pool.rs  wallet.rs
cli/src/commands/common/: about.rs  exit.rs  init_logger.rs  load_plugin.rs  mod.rs  prompt.rs  show.rs
cli/src/commands/did/: import.rs  list.rs  mod.rs  new.rs  qualify.rs  rotate_key.rs  set_metadata.rs  use_did.rs
cli/src/commands/ledger/: attrib.rs  auth_rule.rs  common.rs  constants.rs  cred_def.rs  custom.rs  endorser.rs  frozen_ledger.rs  mod.rs  node.rs  nym.rs  pool_config.rs  pool_restart.rs  pool_upgrade.rs  schema.rs  sign_multi.rs  transaction.rs  transaction_author_agreement.rs  validator_info.rs
cli/src/commands/pool/: connect.rs  constants.rs  create.rs  delete.rs  disconnect.rs  list.rs  mod.rs  refresh.rs  set_protocol_version.rs  show_taa.rs
cli/src/commands/wallet/: attach.rs  close.rs  create.rs  delete.rs  detach.rs  export.rs  import.rs  list.rs  mod.rs  open.rs
cli/src/tools/: did.rs  ledger.rs  mod.rs  pool.rs  wallet.rs
cli/src/tools/did/: constants.rs  key.rs  mod.rs  seed.rs
cli/src/tools/ledger/: helpers.rs  mod.rs  response.rs
cli/src/tools/pool/: directory.rs  mod.rs  pool_config.rs
cli/src/tools/wallet/: backup.rs  credentials.rs  directory.rs  libindy_backup_reader.rs  mod.rs  uri.rs  wallet_config.rs
cli/src/utils/: environment.rs  file.rs  history.rs  logger.rs  mod.rs  pool_config.rs  table.rs  term.rs  time.rs  wallet_config.rs
debian/: changelog  control  copyright  indy-cli-rs.install
samples/: batch-script  did-import-config.json  linux-config.json
src/: command_executor.rs  error.rs  main.rs  params_parser.rs
src/commands/: mod.rs
src/commands/common/: about.rs  exit.rs  init_logger.rs  load_plugin.rs  mod.rs  prompt.rs  show.rs
src/commands/did/: import.rs  list.rs  mod.rs  new.rs  qualify.rs  rotate_key.rs  set_metadata.rs  use_did.rs
src/commands/ledger/: attrib.rs  auth_rule.rs  common.rs  constants.rs  cred_def.rs  custom.rs  endorser.rs  frozen_ledger.rs  mod.rs  node.rs  nym.rs  pool_config.rs  pool_restart.rs  pool_upgrade.rs  schema.rs  sign_multi.rs  transaction.rs  transaction_author_agreement.rs  validator_info.rs
src/commands/pool/: connect.rs  constants.rs  create.rs  delete.rs  disconnect.rs  list.rs  mod.rs  (+3 more)
src/tools/: mod.rs
src/utils/: history.rs  logger.rs  mod.rs  table.rs
(+24 files in other folders)
